--- a/index.html
+++ b/index.html
@@ -11,16 +11,11 @@
 html,body { height:100%; margin:0; font-family:'Saira',sans-serif; background:#000; overflow:hidden; user-select:none; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay, #vr-button, #top-qr-button { user-select:none; }
 
-/* Panorama */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
-
-/* intro black fade */
 #intro-black { position:fixed; inset:0; background:#000; z-index:50; }
 
-/* license bar */
 #license-bar { position: fixed; bottom:12px; left:50%; transform:translateX(-50%); max-width:92%; background: rgba(0,0,0,0.18); backdrop-filter:blur(10px); color:#fff; padding:10px 18px; font-size:13px; z-index:12; text-align:center; border-radius:12px; white-space:pre-wrap; overflow-y:auto; }
 
-/* overlay */
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.60); display:flex; align-items:center; justify-content:center; z-index:60; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
@@ -45,30 +40,19 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
   width:80px; height:80px; margin:0 auto 12px auto; display:block;
   transform-origin:center bottom;
 }
-
-/* instructions header */
 #instructions-line { font-weight:700; margin-top:8px; color:#fff; text-transform:uppercase; text-decoration:none; }
-
-/* list */
 #instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
-
-/* divider */
 #overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
-
-/* dismiss pulse */
 #dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; animation:pulseDismiss 2s infinite; }
 @keyframes pulseDismiss { 0%,100%{opacity:1;}50%{opacity:0.4;} }
 
-/* tooltip preview */
 #tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:6px 10px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
 #tooltip-preview img { width:100%; height:auto; object-fit:contain; border-radius:6px; }
 
-/* hotspot & video panels */
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
 #video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.30); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#d0d0d0; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
 
-/* arrow buttons */
 .arrow-btn {
   position:fixed; top:50%; transform:translateY(-50%);
   font-size:2rem; color:#fff; background: rgba(0,0,0,0.4);
@@ -80,22 +64,18 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #arrow-left { left:12px; }
 #arrow-right { right:12px; }
 
-/* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
 #youtube-content { background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); border-radius:16px; padding:12px; max-width:90%; width:880px; max-height:80%; height:480px; display:flex; flex-direction:column; align-items:center; justify-content:center; }
 #youtube-content iframe { width:100%; height:100%; border-radius:10px; border:none; }
 
-/* qr overlay & content */
 #qr-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
 #qr-content { display:flex; flex-direction:column; align-items:center; justify-content:center; padding:12px; border-radius:16px; background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); width:max-content; height:max-content; gap:8px; box-shadow:none; }
 #qr-content img { width:512px; height:512px; object-fit:contain; border-radius:32px; }
 #qr-content p { margin:0; color:#d0d0d0; font-size:0.95rem; text-align:center; }
 
-/* QR & VR buttons */
 #top-qr-button, #vr-button { position:fixed; right:12px; padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; z-index:80; cursor:pointer; font-family:'Saira',sans-serif; font-size:0.95rem; box-shadow:none; display:none; }
 #top-qr-button { top:12px; } #vr-button { top:64px; }
 
-/* fullscreen control style */
 .pannellum-fullscreen-button { padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; box-shadow:none; }
 
 @media(max-width:900px){
@@ -143,7 +123,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
   <span id="manhattan-video-text">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
-<div id="license-bar">Loading license...</div>
+<div id="license-bar"></div>
 
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
@@ -167,6 +147,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
+// IMAGES AND HOTSPOTS
 const images = [
   { 
     url:"https://i.imgur.com/FYdmUI3.jpeg",
@@ -182,35 +163,58 @@ const images = [
 ];
 
 let currentIndex = 0;
+let viewer;
 
-const viewer = pannellum.viewer('panorama', {
-  type:'equirectangular', panorama:images[0].url, autoLoad:true,
-  hfov:100, showFullscreenCtrl:true, showZoomCtrl:false, compass:false,
-  autoRotate:1, autoRotateInactivityDelay:10000, autoRotateStopDelay:0
-});
-
-// DOM refs
+// DOM
 const overlay = document.getElementById('overlay');
 const hotspotPanel = document.getElementById('hotspot-panel');
-const previewLink = document.getElementById('preview-link');
-const tooltip = document.getElementById('tooltip-preview');
-const tooltipLink = document.getElementById('tooltip-link');
-const qrBtn = document.getElementById('top-qr-button');
-const vrBtn = document.getElementById('vr-button');
-const qrOverlay = document.getElementById('qr-overlay');
-const qrContent = document.getElementById('qr-content');
-const youtubeOverlay = document.getElementById('youtube-overlay');
-const youtubeFrame = document.getElementById('youtube-frame');
+const videoLinkPanel = document.getElementById('video-link-panel');
 const arrowLeft = document.getElementById('arrow-left');
 const arrowRight = document.getElementById('arrow-right');
+const qrBtn = document.getElementById('top-qr-button');
+const vrBtn = document.getElementById('vr-button');
 const introBlack = document.getElementById('intro-black');
 const licenseBar = document.getElementById('license-bar');
-const videoLinkPanel = document.getElementById('video-link-panel');
 
-// overlay dismissal
+// CREATE PANNELLUM VIEWER
+function createViewer(index){
+  viewer = pannellum.viewer('panorama', {
+    type:'equirectangular',
+    panorama: images[index].url,
+    autoLoad:true,
+    hfov:100,
+    showFullscreenCtrl:true,
+    showZoomCtrl:false,
+    compass:false,
+    autoRotate:1,
+    autoRotateInactivityDelay:10000,
+    autoRotateStopDelay:0
+  });
+  updateHotspotAndVideo(index);
+}
+
+// UPDATE HOTSPOT / VIDEO
+function updateHotspotAndVideo(index){
+  currentIndex = index;
+  hotspotPanel.innerHTML = images[index].text;
+  videoLinkPanel.style.display = images[index].showVideo ? 'block' : 'none';
+}
+
+// ARROWS
+arrowLeft.addEventListener('click', ()=>{
+  const nextIndex = (currentIndex - 1 + images.length) % images.length;
+  viewer.destroy();
+  createViewer(nextIndex);
+});
+arrowRight.addEventListener('click', ()=>{
+  const nextIndex = (currentIndex + 1) % images.length;
+  viewer.destroy();
+  createViewer(nextIndex);
+});
+
+// OVERLAY DISMISS
 overlay.addEventListener('click', (e)=>{
-  if (e.target.closest && e.target.closest('#preview-link')) return;
-
+  if (e.target.closest('#preview-link')) return;
   overlay.setAttribute('aria-hidden','true');
   overlay.style.display='none';
   hotspotPanel.style.display='block';
@@ -218,83 +222,16 @@ overlay.addEventListener('click', (e)=>{
   arrowRight.style.display='block';
   qrBtn.style.display='block';
   vrBtn.style.display='block';
-  updateImage(currentIndex);
 
-  setTimeout(() => {
-    introBlack.style.transition='opacity 0.7s';
-    introBlack.style.opacity=0;
+  // HOLD BLACK FADE 1 SECOND THEN LOAD
+  setTimeout(()=>{
+    introBlack.style.transition = 'opacity 0.7s';
+    introBlack.style.opacity = 0;
     setTimeout(()=>{ introBlack.style.display='none'; }, 700);
+    createViewer(currentIndex);
+    licenseBar.textContent = "Your actual license text goes here"; // replace with your real license
   }, 1000);
 });
-
-// update panorama and hotspot/video
-function updateImage(index){
-  currentIndex = index;
-  viewer.setPanorama(images[currentIndex].url);
-  hotspotPanel.innerHTML = images[currentIndex].text;
-  videoLinkPanel.style.display = images[currentIndex].showVideo ? 'block' : 'none';
-}
-
-// arrow navigation
-arrowLeft.addEventListener('click', ()=>updateImage((currentIndex - 1 + images.length) % images.length));
-arrowRight.addEventListener('click', ()=>updateImage((currentIndex + 1) % images.length));
-
-// tooltip
-previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
-previewLink.addEventListener('mousemove', e=>{
-  const ttW = tooltip.offsetWidth, ttH = tooltip.offsetHeight;
-  let left = e.clientX - ttW/2, top = e.clientY - ttH - 12;
-  if(top<8) top = e.clientY+12;
-  if(left<8) left=8;
-  if(left+ttW>window.innerWidth-8) left=window.innerWidth-ttW-8;
-  tooltip.style.left = Math.round(left)+'px';
-  tooltip.style.top = Math.round(top)+'px';
-});
-previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover') && !previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } }, 80); });
-tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); });
-tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
-if(tooltipLink) tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
-
-// 360 video
-videoLinkPanel.addEventListener('click', e=>{
-  e.stopPropagation();
-  youtubeFrame.src = "https://www.youtube-nocookie.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
-  youtubeOverlay.style.display='flex';
-  arrowLeft.style.display='none';
-  arrowRight.style.display='none';
-  requestAnimationFrame(()=> youtubeOverlay.style.opacity = 1);
-});
-youtubeOverlay.addEventListener('click', ()=>{
-  youtubeOverlay.style.opacity=0;
-  setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; arrowLeft.style.display='block'; arrowRight.style.display='block'; }, 280);
-});
-
-// QR overlay
-qrBtn.addEventListener('click', e=>{ 
-  e.stopPropagation();
-  qrOverlay.style.display='flex';
-  arrowLeft.style.display='none';
-  arrowRight.style.display='none';
-  requestAnimationFrame(()=> qrOverlay.style.opacity=1);
-});
-qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
-qrContent.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; });
-
-// ESC closes modals
-document.addEventListener('keydown', e=>{
-  if(e.key==='Escape'){
-    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; arrowLeft.style.display='block'; arrowRight.style.display='block'; },280); }
-    if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); arrowLeft.style.display='block'; arrowRight.style.display='block'; }
-  }
-});
-
-// fade intro initially
-setTimeout(()=>{ introBlack.style.transition='opacity 0.7s'; introBlack.style.opacity=0; setTimeout(()=>{ introBlack.style.display='none'; },700); },2500);
-
-// simulate license loading
-setTimeout(()=>{ licenseBar.textContent = "Images © Lex of Dystopia | All Rights Reserved"; },1200);
 </script>
-
 </body>
 </html>
